    - Closes #4467.
  - Small Clean-up, Sticky pistons cannot move immutable FlagWar blocks (e.g. a flag beacon), courtesy of TheFlagCourier with PR #4469.
  - Expand `/towny universe` output, courtesy of TheFlagCourier with PR #4470.
0.96.4.0:
  - Bump version for Release.
0.96.4.1:
  - es-419.yml updated by EuGNosii with PR #4471.
  - API: Add NationPreTownLeaveEvent.
  - Have FlagWar and the Towny conquering feature use the NationPreTownLeaveEvent. 
  - Remove FlagWar references from NationCommand using existing NationPreTransactionEvent.
  - Remove FlagWar reference from TownCommand's withdraw method using existing TownPreTransactionEvent.
  - Make TownyPermissionSource.has() private, replace calls to it with correct .testPermission() method.
  - Added an missing string in es-419.yml, courtesy of EuGNosii with PR #4475.
  - Add missing getHandlerList() to PlayerKilledPlayerEvent.
  - Undo making TownyPermissionSource.has() private. TownyChat uses it.
  - Remove the TownyWeatherListener, courtesy of TheFlagCourier with PR #4482.
  - Addition of strictHas(), courtesy of docwhomc with PR #4477.
  - New Config Option: plugin.hour_timer.hour_interval
  	- Default 60m
    - The number of minutes in each "hour".
    - Default is 60m.
  - New Config Option: plugin.hour_timer.new_hour_time
    - Default: 30m
    - The time each "hour", when the hourly timer ticks.
    - MUST be less than hour_interval. Default is 30m.
  - New Config Option: plugin.hour_timer.short_interval
    - Default: 20s
    - The interval of each "short" timer tick.
    - Default is 20s.
  - TownySettings#calcTownLevelId(Town town)
    - Method used to determine which town_level a town is, based on the numeric order of the town_levels.
  - Add missing @deprecated Javadoc tags and @Deprecated annotations, courtesy of TheFlagCourier with PR #4488.
  - Remove some long-deprecated methods.
  - Prevent admins from Soft-Locking Towny by force-joining outlaws, courtesy of TheFlagCourier with PR #4493.